defconfig: re-generate
Signed-off-by: ZyCromerZ <neetroid97@gmail.com>

--- a/arch/arm64/configs/begonia_user_defconfig
+++ b/arch/arm64/configs/begonia_user_defconfig
@@ -602,7 +602,7 @@ CONFIG_RANDOMIZE_BASE=y
 #
 # Boot options
 #
-CONFIG_CMDLINE="console=tty0 console=ttyMT3,921600n1 root=/dev/ram vmalloc=496M slub_max_order=0 slub_debug=O "
+CONFIG_CMDLINE="root=/dev/ram vmalloc=496M slub_max_order=0 slub_debug=O "
 CONFIG_CMDLINE_FROM_BOOTLOADER=y
 # CONFIG_CMDLINE_EXTEND is not set
 # CONFIG_CMDLINE_FORCE is not set
@@ -613,7 +613,7 @@ CONFIG_IMG_GZ_DTB=y
 # CONFIG_IMG_DTB is not set
 CONFIG_BUILD_ARM64_APPENDED_KERNEL_IMAGE_NAME="Image.gz-dtb"
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES="mediatek/mt6785"
-CONFIG_BUILD_ARM64_DTB_OVERLAY_IMAGE_NAMES="mediatek/begonia mediatek/k85v1_64"
+CONFIG_BUILD_ARM64_DTB_OVERLAY_IMAGE_NAMES="mediatek/begonia"
 
 #
 # Userspace binary formats
@@ -794,6 +794,8 @@ CONFIG_TCP_CONG_HTCP=y
 # CONFIG_TCP_CONG_BBR is not set
 CONFIG_DEFAULT_BIC=y
 # CONFIG_DEFAULT_CUBIC is not set
+# CONFIG_DEFAULT_HTCP is not set
+# CONFIG_DEFAULT_WESTWOOD is not set
 # CONFIG_DEFAULT_RENO is not set
 CONFIG_DEFAULT_TCP_CONG="bic"
 # CONFIG_TCP_MD5SIG is not set
@@ -1181,8 +1183,8 @@ CONFIG_WEXT_CORE=y
 CONFIG_WEXT_PROC=y
 CONFIG_WEXT_PRIV=y
 CONFIG_CFG80211=y
-CONFIG_NL80211_TESTMODE=y
-CONFIG_CFG80211_DEVELOPER_WARNINGS=y
+# CONFIG_NL80211_TESTMODE is not set
+# CONFIG_CFG80211_DEVELOPER_WARNINGS is not set
 # CONFIG_CFG80211_CERTIFICATION_ONUS is not set
 # CONFIG_CFG80211_DEFAULT_PS is not set
 # CONFIG_CFG80211_DEBUGFS is not set
@@ -1841,8 +1843,7 @@ CONFIG_MTK_SCHED_INTEROP=y
 #
 # MTK Energy Aware Scheduler Plus
 #
-CONFIG_MTK_SCHED_EAS_POWER_SUPPORT=y
-# CONFIG_MTK_SCHED_MULTI_GEARS is not set
+# CONFIG_MTK_SCHED_EAS_POWER_SUPPORT is not set
 
 #
 # MTK Heterogenous MultiProcessor Scheduler
@@ -1908,9 +1909,8 @@ CONFIG_USB_PD_VBUS_STABLE_TOUT=125
 CONFIG_PD_DBG_INFO=y
 CONFIG_MTK_DEVMPU=y
 # CONFIG_MTK_DEVMPU_EMI is not set
-CONFIG_MTK_PERFMGR_TOUCH_BOOST=y
-CONFIG_MTK_LOAD_TRACKER=y
-CONFIG_MTK_CPU_CTRL_CFP=y
+# CONFIG_MTK_PERFMGR_TOUCH_BOOST is not set
+# CONFIG_MTK_LOAD_TRACKER is not set
 # CONFIG_MTK_PERF_OBSERVER is not set
 CONFIG_MTK_RESYM=y
 CONFIG_MTK_FPSGO_V3=y
@@ -2304,7 +2304,7 @@ CONFIG_TOUCHSCREEN_PHYSICAL_ROTATION_WITH_LCM=y
 # CONFIG_TOUCHSCREEN_MTK_FOCALTECH_FHD is not set
 # CONFIG_TOUCHSCREEN_MTK_GT9157 is not set
 CONFIG_XIAOMI_SPI_TOUCH=y
-CONFIG_TOUCHSCREEN_NVT_DEBUG_FS=y
+# CONFIG_TOUCHSCREEN_NVT_DEBUG_FS is not set
 CONFIG_TOUCHSCREEN_NT36xxx_HOSTDL_SPI_G7=y
 # CONFIG_TOUCHSCREEN_FTS8719 is not set
 CONFIG_TOUCHSCREEN_PROPERTIES=y
@@ -3690,7 +3690,7 @@ CONFIG_MTK_EMMC_HW_CQ=y
 # CONFIG_MMC_MTK is not set
 # CONFIG_MMC_MTK_LEGACY_SDIO is not set
 # CONFIG_MMC_MTK_SDIO is not set
-CONFIG_MTK_MMC_DEBUG=y
+# CONFIG_MTK_MMC_DEBUG is not set
 # CONFIG_MEMSTICK is not set
 CONFIG_NEW_LEDS=y
 CONFIG_LEDS_CLASS=y
@@ -4784,7 +4784,7 @@ CONFIG_PRINTK_TIME=y
 CONFIG_CONSOLE_LOGLEVEL_DEFAULT=4
 CONFIG_MESSAGE_LOGLEVEL_DEFAULT=4
 # CONFIG_BOOT_PRINTK_DELAY is not set
-CONFIG_DYNAMIC_DEBUG=y
+# CONFIG_DYNAMIC_DEBUG is not set
 
 #
 # Compile-time checks and compiler options
