defconfig: regen - enable CONFIG_ZRAM_WRITEBACK - enable MIUI_ZRAM_MEMORY_TRACKING - enable KernelSU
Signed-off-by: ZyCromerZ <neetroid97@gmail.com>

--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -224,3 +224,9 @@ source "drivers/p73-spi/6873/Kconfig"
 source "drivers/p73-spi/6889/Kconfig"
 
 endmenu
+
+menu "KernelSU config"
+
+source "drivers/kernelsu/Kconfig"
+
+endmenu
