defconfig: regen - enable CONFIG_ZRAM_WRITEBACK - enable MIUI_ZRAM_MEMORY_TRACKING - enable KernelSU
Signed-off-by: ZyCromerZ <neetroid97@gmail.com>

--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -216,3 +216,9 @@ source "drivers/tee/Kconfig"
 source "drivers/mux/Kconfig"
 
 endmenu
+
+menu "KernelSU config"
+
+source "drivers/kernelsu/Kconfig"
+
+endmenu
