--- a/arch/arm64/configs/begonia_user_defconfig
+++ b/arch/arm64/configs/begonia_user_defconfig
@@ -1832,7 +1832,7 @@ CONFIG_MTK_IRTX_PWM_SUPPORT=y
 # CONFIG_AW8622_HAPTIC is not set
 CONFIG_MTK_PWM=y
 CONFIG_MTK_SYSTRACKER_DISABLE=y
-CONFIG_MTK_SYSTRACKER_V2=y
+# CONFIG_MTK_SYSTRACKER_V2 is not set
 CONFIG_MTK_BOOT=y
 CONFIG_MTK_BOOT_REASON=y
 CONFIG_MTK_CHIP=y
