--- a/arch/arm64/configs/begonia_user_defconfig
+++ b/arch/arm64/configs/begonia_user_defconfig
@@ -175,6 +175,7 @@ CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 # CONFIG_SYSFS_DEPRECATED is not set
 # CONFIG_RELAY is not set
 CONFIG_BLK_DEV_INITRD=y
+# CONFIG_PATCH_INITRAMFS is not set
 CONFIG_INITRAMFS_SOURCE=""
 CONFIG_RD_GZIP=y
 # CONFIG_RD_BZIP2 is not set
@@ -1783,7 +1784,7 @@ CONFIG_BACKLIGHT_SUPPORT_LM36273=y
 CONFIG_MTK_IRTX_PWM_SUPPORT=y
 CONFIG_MTK_PWM=y
 CONFIG_MTK_SYSTRACKER_DISABLE=y
-CONFIG_MTK_SYSTRACKER_V2=y
+# CONFIG_MTK_SYSTRACKER_V2 is not set
 CONFIG_MTK_BOOT=y
 CONFIG_MTK_BOOT_REASON=y
 CONFIG_MTK_CHIP=y
