[SQUASH] Remove KernelSU from kernel source * and keep changes kprobes to using different implement KSU
Signed-off-by: ZyCromerZ <neetroid97@gmail.com>

--- a/arch/arm64/configs/begonia_user_defconfig
+++ b/arch/arm64/configs/begonia_user_defconfig
@@ -182,6 +182,7 @@ CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 # CONFIG_SYSFS_DEPRECATED is not set
 # CONFIG_RELAY is not set
 CONFIG_BLK_DEV_INITRD=y
+# CONFIG_PATCH_INITRAMFS is not set
 CONFIG_INITRAMFS_SOURCE=""
 CONFIG_RD_GZIP=y
 # CONFIG_RD_BZIP2 is not set
@@ -4554,12 +4555,6 @@ CONFIG_BEGONIA_NFC=y
 # CONFIG_CANNONG_NFC is not set
 # CONFIG_BOMB_NFC is not set
 # CONFIG_CEZANNE_NFC is not set
-
-#
-# KernelSU config
-#
-CONFIG_KSU=y
-# CONFIG_KSU_DEBUG is not set
 
 #
 # Firmware Drivers
