defconfig: update for ksu
Signed-off-by: ZyCromerZ <neetroid97@gmail.com>

--- a/arch/arm64/configs/begonia_user_defconfig
+++ b/arch/arm64/configs/begonia_user_defconfig
@@ -237,7 +237,7 @@ CONFIG_SLUB_CPU_PARTIAL=y
 # CONFIG_SYSTEM_DATA_VERIFICATION is not set
 CONFIG_PROFILING=y
 CONFIG_TRACEPOINTS=y
-# CONFIG_KPROBES is not set
+CONFIG_KPROBES=y
 # CONFIG_JUMP_LABEL is not set
 CONFIG_UPROBES=y
 # CONFIG_HAVE_64BIT_ALIGNED_ACCESS is not set
@@ -5068,3 +5068,4 @@ CONFIG_SBITMAP=y
 # CONFIG_STRING_SELFTEST is not set
 CONFIG_CJSON=y
 CONFIG_HWCONF_MANAGER=y
+CONFIG_KPROBE_EVENTS=y
